--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <div id="container"></div>
-
-  <script type="text/javascript" src="js/react.js"></script>
-  <script type="text/javascript" src="js/react-dom.js"></script>
-  <script type="text/javascript"src="js/browser.min.js"></script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.8/react.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.8/react-dom.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.
   <script type="text/babel">
   	var Counter = React.createClass({
   	  getInitialState:function(){
